--- a/style.css
+++ b/style.css
@@ -11,14 +11,22 @@ html {
 
 header {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
+/* ===NAVIGATION BAR */
 .nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 4.5rem;
     height: auto;
+}
+
+.navbar {
+    display: none;
 }
 
 .nav-bar .logo {
@@ -77,14 +85,78 @@ header {
     line-height: 3.4375rem;
 }
 
-.nav-bar ul .btn .fa-arrow-right {
+.nav-bar ul .btn:hover .fa-solid {
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+}
+
+.nav-bar ul .btn .fa-solid {
     width: 1.5rem;
     height: 1.5rem;
     transform: rotate(-45deg);
+    transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    -ms-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+}
+
+/* =====================HERO SECTION */
+/* =====================HERO SECTION */
+.hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.hero_text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hero_text h1 {
+    font-family: Playfair Display;
+    font-size: 65px;
+    font-weight: 500;
+    line-height: 65px;
+    letter-spacing: -0.05em;
+    text-align: center;
+    color: #141414;
+
+}
+
+.hero_text h1 span {
+    color: #F48300;
+}
+
+.hero_text p {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: -0.02em;
+    text-align: center;
+
 }
 
 /* animation css */
 
 /* responsiveness css */
+@media(max-width:899px) {
+    .nav-bar {
+        display: none;
+    }
+
+    .navbar {
+        display: flex;
+    }
+}
 
 /* contact css */
