--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
 }
 
 .hero_text h1 {
@@ -144,6 +145,30 @@ header {
     letter-spacing: -0.02em;
     text-align: center;
 
+}
+
+.btn button {
+    border: none;
+    background-color: #F48300;
+    padding: 10px 30px;
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+}
+
+.btn button a {
+    text-decoration: none;
+    color: #141414;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+.hero_img img {
+    height: 600px;
+    width: 100%;
+    object-fit: contain;
 }
 
 /* animation css */
