--- a/style.css
+++ b/style.css
@@ -17,55 +17,50 @@ header {
 }
 
 /* ===NAVIGATION BAR */
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem 4.5rem;
-    height: auto;
-}
-
-.navbar {
+.navbar input[type="checkbox"],
+.navbar .hamburger-lines {
     display: none;
 }
 
-.nav-bar .logo {
-    width: 5.6875rem;
-    height: 5.6875rem;
-    flex-shrink: 0;
+.container {
+    max-width: 1200px;
+    width: 90%;
+    margin: auto;
 }
 
-.nav-bar ul {
+.navbar {
+    width: 100%;
+    background: #fff;
+    color: #000;
+    opacity: 0.85;
+    z-index: 100;
+}
+
+.navbar-container {
     display: flex;
-    padding: 0.625rem;
-    justify-content: center;
+    justify-content: space-between;
+    height: 64px;
     align-items: center;
-    gap: 0.875rem;
 }
 
-.nav-bar ul li {
-    list-style: none;
+.menu-items {
+    order: 2;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: space-between;
 }
 
-
-
-
-.nav-bar ul li a {
-    padding: 10px 30px;
-    color: #141414;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 3.4375rem;
-    /* 343.75% */
-    letter-spacing: -0.02rem;
-    text-decoration: none;
-
+.menu-items a {
+    white-space: nowrap;
 }
 
-.nav-bar ul .btn {
+.menu-items li {
+    margin-right: 1rem;
+}
+
+.menu-items .btn2 {
     display: flex;
     height: 2.1875rem;
     padding: 20px 30px;
@@ -85,7 +80,22 @@ header {
     line-height: 3.4375rem;
 }
 
-.nav-bar ul .btn:hover .fa-solid {
+.menu-items .btn2 .fa-solid {
+    width: 1.5rem;
+    height: 1.5rem;
+    transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    -ms-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+}
+
+.menu-items .btn2:hover .fa-solid {
     transform: rotate(0);
     -webkit-transform: rotate(0);
     -moz-transform: rotate(0);
@@ -93,16 +103,35 @@ header {
     -o-transform: rotate(0);
 }
 
-.nav-bar ul .btn .fa-solid {
-    width: 1.5rem;
-    height: 1.5rem;
-    transform: rotate(-45deg);
-    transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    -moz-transition: all .4s ease-in-out;
-    -ms-transition: all .4s ease-in-out;
-    -o-transition: all .4s ease-in-out;
+.logo {
+    width: 6.1875rem;
+    height: 6.25rem;
 }
+
+.menu-items li {
+    list-style: none;
+    margin-left: 1.5rem;
+    font-size: 1.3rem;
+
+}
+
+.navbar a {
+    color: #444;
+    padding: 5%;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.5rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    transition: color 0.4s ease-in-out;
+    -webkit-transition: color 0.4s ease-in-out;
+    -moz-transition: color 0.4s ease-in-out;
+    -ms-transition: color 0.4s ease-in-out;
+    -o-transition: color 0.4s ease-in-out;
+}
+
 
 /* =====================HERO SECTION */
 /* =====================HERO SECTION */
@@ -217,13 +246,134 @@ header {
 /* animation css */
 
 /* responsiveness css */
-@media(max-width:899px) {
-    .nav-bar {
-        display: none;
+
+
+@media (max-width: 768px) {
+    .navbar {
+        opacity: 0.95;
     }
 
-    .navbar {
+    .navbar-container input[type="checkbox"],
+    .navbar-container .hamburger-lines {
+        display: block;
+    }
+
+    .navbar-container {
+        display: block;
+        position: relative;
+        height: 64px;
+        width: 100%;
+    }
+
+    .navbar-container input[type="checkbox"] {
+        position: absolute;
+        display: block;
+        height: 32px;
+        width: 30px;
+        top: 20px;
+        left: 20px;
+        z-index: 5;
+        opacity: 0;
+        cursor: pointer;
+    }
+
+    .navbar-container .hamburger-lines {
+        display: block;
+        height: 28px;
+        width: 35px;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 2;
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .navbar-container .hamburger-lines .line {
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 10px;
+        background: #333;
+    }
+
+    .navbar-container .hamburger-lines .line1 {
+        transform-origin: 0% 0%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line2 {
+        transition: transform 0.2s ease-in-out;
+    }
+
+    .navbar-container .hamburger-lines .line3 {
+        transform-origin: 0% 100%;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .navbar .menu-items {
+        padding-top: 100px;
+        padding-bottom: 1rem;
+        padding-right: 1rem;
+        border-radius: 1rem;
+        background: #FEF6AC;
+        height: auto;
+        width: auto;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        padding-left: 0px;
+        transition: transform 0.5s ease-in-out;
+        transform: translate(-150%);
+        box-shadow: 5px 0px 10px 0px #aaa;
+        -webkit-transform: translate(-150%);
+        -moz-transform: translate(-150%);
+        -ms-transform: translate(-150%);
+        -o-transform: translate(-150%);
+    }
+
+    .navbar .menu-items li {
+        margin-bottom: 1.8rem;
+        text-align: center;
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+
+
+    .navbar .menu-items li a:hover {
+        color: burlywood;
+        background-color: transparent;
+    }
+
+    .logo {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: 2.5rem;
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.menu-items {
+        transform: translateX(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+        transform: rotate(45deg);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+        transform: scaleY(0);
+    }
+
+    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+        transform: rotate(-45deg);
+    }
+
+}
+
+@media (max-width: 500px) {
+    .navbar-container input[type="checkbox"]:checked~.logo {
+        display: none;
     }
 }
 
