--- a/style.css
+++ b/style.css
@@ -248,59 +248,59 @@ header {
 /* ==========================illuminating */
 .illuminating {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    height: 100%;
-    padding: 0rem 4rem;
+
 }
 
 .illuminating-1 {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 50%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    padding: 2%;
 }
 
-.illuminating-1-a {
-    height: 10rem;
-}
-
-.illuminating-1-a h2 {
+.illuminating-1 h2 {
     color: #141414;
     leading-trim: both;
     text-edge: cap;
     font-family: Playfair Display;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 500;
     line-height: 3.4375rem;
     /* 137.5% */
     letter-spacing: -0.075rem;
+    width: 50%;
 }
 
-.illuminating-1-a p {
+.illuminating-1 h2 span {
+    color: #F48300;
+}
+
+.illuminating-1 p {
     color: #1E1E1E;
     font-family: Poppins;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
 
     /* 110% */
-
+    width: 50%;
 }
 
-.illuminating-1-a h2 span {
-    color: #F48300;
-}
-
-.illuminating-1-b {
+.illuminating-2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: ;
 }
 
-.illuminating-1-b img {
-    height: 100%;
+.illuminating-2 img {
     width: 100%;
 }
 
@@ -356,7 +356,7 @@ header {
         height: 4px;
         width: 100%;
         border-radius: 10px;
-        background: #333;
+        background: #F48300;
     }
 
     .navbar-container .hamburger-lines .line1 {
@@ -435,6 +435,94 @@ header {
 @media (max-width: 500px) {
     .navbar-container input[type="checkbox"]:checked~.logo {
         display: none;
+    }
+
+    /* ==========================HEADER */
+    /* ==========================HEADER */
+    header {
+        height: 10%;
+        display: flex;
+        flex-direction: column;
+        gap: 11.62rem;
+        margin-bottom: 5rem;
+    }
+
+    .hero_text {
+
+        gap: 1rem;
+    }
+
+    .hero_text h1 {
+        color: #141414;
+        text-align: center;
+        font-family: Playfair Display;
+        font-size: 3rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 4rem;
+        /* 100% */
+        letter-spacing: .1rem;
+    }
+
+    .hero_text p {
+        font-family: Poppins;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+
+    }
+
+    .hero_img img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+    }
+
+    /* ===============================ILLUMINATING */
+    /* ===============================ILLUMINATING */
+    .illuminating {
+        gap: 2.5rem;
+    }
+
+    .illuminating-1 {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        height: 100%;
+        width: 100%;
+        padding: 2%;
+    }
+
+    .illuminating-1 h2 {
+        color: #141414;
+        leading-trim: both;
+        text-edge: cap;
+        font-family: Playfair Display;
+        font-size: 2.75rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 2.125rem;
+        /* 121.429% */
+        letter-spacing: -0.0525rem;
+        width: 100%;
+    }
+
+    .illuminating-1 p {
+        color: #1E1E1E;
+        font-family: Poppins;
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 2.375rem;
+        /* 137.5% */
+        letter-spacing: -0.02rem;
+        width: 100%;
+    }
+
+    .illuminating-2 {
+        flex-direction: column;
     }
 }
 
