--- a/style.css
+++ b/style.css
@@ -582,6 +582,90 @@ footer img {
     font-size: 3.3rem;
 }
 
+/* CONTACT PAGE ================================ */
+/* CONTACT PAGE ================================ */
+/* CONTACT PAGE ================================ */
+.hero_c {
+    margin-top: 9rem;
+    margin-bottom: 3.75rem;
+}
+
+.contactUs {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 15rem;
+}
+
+.contactUs h1 {
+    color: #000;
+    text-align: center;
+    font-family: "Playfair Display";
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 3.4375rem;
+    letter-spacing: -0.05rem;
+    margin-bottom: 2.5rem;
+}
+
+.contactUs-box {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.contactUs-box_1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    width: 18.875rem;
+    height: 17.5rem;
+    flex-shrink: 0;
+    border-radius: 0.5rem;
+    background: #FEF6AC;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
+    padding: 10px 30px 5px 30px;
+    margin-left: 1.5rem;
+    overflow: hidden;
+    gap: 1rem;
+}
+
+.contactUs-box_1 i {
+    font-size: 3rem;
+}
+
+.contactUs-box_1 h1 {
+    color: #141414;
+    text-align: center;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: "Playfair Display";
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 3.4375rem;
+    /* 229.167% */
+    letter-spacing: -0.045rem;
+}
+
+.contactUs-box_1 h1 span {
+    color: #000;
+    text-align: center;
+    leading-trim: both;
+    text-edge: cap;
+    font-family: Poppins;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 3.4375rem;
+    /* 305.556% */
+    letter-spacing: -0.03375rem;
+}
+
 /* animation css */
 
 
