--- a/style.css
+++ b/style.css
@@ -666,6 +666,85 @@ footer img {
     letter-spacing: -0.03375rem;
 }
 
+.cotactUs-social {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.cotactUs a {
+    text-decoration: none;
+}
+
+.cotactUsn a .fa-youtube {
+    color: red;
+    font-size: 3.3rem;
+}
+
+.contactUs-form {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10rem;
+}
+
+.contactUs-form form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 2.5rem;
+}
+
+.contactUs-form form label {
+    color: rgba(20, 20, 20, 0.80);
+    leading-trim: both;
+    text-edge: cap;
+    font-family: Poppins;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.625rem;
+    /* 108.333% */
+    letter-spacing: -0.045rem;
+    text-transform: uppercase;
+}
+
+.contactUs-form form input {
+    width: 35.5rem;
+    height: 2.5rem;
+    flex-shrink: 0;
+    border-radius: 0.5rem;
+    background: #FFF;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
+    border: none;
+}
+
+form textarea {
+    width: 35.5rem;
+    height: 22.75rem;
+    border-radius: 0.375rem;
+    background: #FFF;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
+    border: none;
+}
+
+form button {
+    display: flex;
+    width: 12.24625rem;
+    height: 2.375rem;
+    padding: 0.625rem 0.625rem 0.625rem 1.25rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    border-radius: 1rem;
+    background: #F48300;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+    align-self: center;
+}
+
 /* animation css */
 
 
@@ -1020,6 +1099,38 @@ footer img {
         width: 80%;
         font-size: 1rem;
         text-align: left;
+    }
+
+    /* FOOTER=============================== */
+    /* FOOTER=============================== */
+    /* FOOTER=============================== */
+    footer {
+        height: 100%;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    /* CONATCT CSS */
+    /* CONATCT CSS */
+    .contactUs-box {
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .contactUs-form form input {
+        width: 19.375rem;
+        height: 2.5rem;
+        flex-shrink: 0;
+    }
+
+    form textarea {
+        width: 19.375rem;
+        height: 22.75rem;
+        border-radius: 0.375rem;
+        background: #FFF;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
+        border: none;
     }
 }
 
