--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ footer img {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 15rem;
+    margin-bottom: 3rem;
 }
 
 .contactUs h1 {
@@ -666,18 +666,26 @@ footer img {
     letter-spacing: -0.03375rem;
 }
 
-.cotactUs-social {
+.contactUs-social {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5rem;
 }
 
-.cotactUs a {
+.contactUs-social a {
     text-decoration: none;
 }
 
-.cotactUsn a .fa-youtube {
+.contactUs-social a .fa-youtube {
     color: red;
+    font-size: 3.3rem;
+    margin-right: 1rem;
+}
+
+.contactUs-social a .fa-facebook {
+    color: blue;
     font-size: 3.3rem;
 }
 
@@ -686,7 +694,7 @@ footer img {
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 
 .contactUs-form form {
@@ -721,6 +729,10 @@ footer img {
     border: none;
 }
 
+.contactUs-form form input::after {
+    border: 1px solid #FC8300;
+}
+
 form textarea {
     width: 35.5rem;
     height: 22.75rem;
@@ -743,6 +755,7 @@ form button {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     border: none;
     align-self: center;
+    cursor: pointer;
 }
 
 /* animation css */
@@ -790,7 +803,7 @@ form button {
 /* responsiveness css */
 
 
-@media (max-width: 768px) {
+@media (max-width: 829px) {
     .navbar {
         opacity: 0.95;
     }
@@ -911,227 +924,248 @@ form button {
         transform: rotate(-45deg);
     }
 
-}
-
-@media (max-width: 500px) {
-    .navbar-container input[type="checkbox"]:checked~.logo {
-        display: none;
-    }
-
-    /* ==========================HEADER */
-    /* ==========================HEADER */
-    header {
-        height: 10%;
-        display: flex;
-        flex-direction: column;
-        gap: 11.62rem;
-        margin-bottom: 5rem;
-    }
-
-    .hero_text {
-
-        gap: 1rem;
-    }
-
-    .hero_text h1 {
-        color: #141414;
-        text-align: center;
-        font-family: Playfair Display;
-        font-size: 3rem;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 4rem;
-        /* 100% */
-        letter-spacing: .1rem;
-    }
-
-    .hero_text p {
-        font-family: Poppins;
-        font-size: 1.5rem;
-        font-weight: 400;
-        line-height: 22px;
-        letter-spacing: -0.02em;
-        text-align: center;
-
-    }
-
-    .hero_img img {
-        height: 100%;
-        width: 100%;
-        object-fit: contain;
-    }
-
-    /* ===============================ILLUMINATING */
-    /* ===============================ILLUMINATING */
-    .illuminating {
-        gap: 2.5rem;
-        margin-bottom: 4rem;
-    }
-
-    .illuminating-1 {
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-        height: 100%;
-        width: 100%;
-        padding: 2%;
-    }
-
-    .illuminating-1 h2 {
-        color: #141414;
-        leading-trim: both;
-        text-edge: cap;
-        font-family: Playfair Display;
-        font-size: 2.75rem;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 2.125rem;
-        /* 121.429% */
-        letter-spacing: -0.0525rem;
-        width: 100%;
-    }
-
-    .illuminating-1 p {
-        color: #1E1E1E;
-        font-family: Poppins;
-        font-size: 2rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 2.375rem;
-        /* 137.5% */
-        letter-spacing: -0.02rem;
-        width: 100%;
-    }
-
     .illuminating-2 {
-        flex-direction: column;
-    }
-
-    /* =====================ABOUT SECTION */
-    /* =====================ABOUT SECTION */
-    .about {
-
-        flex-direction: column;
-        gap: 1.5rem;
-        padding: .345%;
-    }
-
-    .about-1_a {
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        gap: 1rem;
-    }
-
-    .about-1_a-i {
-        width: 100%;
-    }
-
-    .about-1_a-i p {
-
-        font-size: 1.5rem;
-
-        font-weight: 300;
-        letter-spacing: -0.025rem;
-    }
-
-    .about-1_a-ii {
-        width: 100%;
-    }
-
-    .about-1_a-ii p {
-
-        font-size: 1.5rem;
-
-        font-weight: 300;
-        letter-spacing: -0.025rem;
-    }
-
-    /* ==========movement */
-    /* ==========movement */
-    .movement {
-        flex-direction: column;
-        padding: 0rem 0rem;
-        align-items: flex-end;
-    }
-
-    .movement-a {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        padding: 0rem 0rem;
-        gap: 1rem;
-        width: 100%;
-        margin-right: 2rem;
+        justify-content: center;
+        width: 38.7575rem;
+
+    }
+
+    /* ===========================MOVEMENT */
+    /* ===========================MOVEMENT */
+    .movement-a {
+
+        align-self: flex-start;
+        padding-left: 1rem;
     }
 
     .movement {
-        width: 100%;
-    }
-
-    .movement-a h2 {
-        text-align: left;
-        width: 80%;
-    }
-
-    .movement p {
-        color: #1E1E1E;
-        font-family: Poppins;
-        font-size: 1.25rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 2rem;
-        letter-spacing: -0.025rem;
-        width: 80%;
-    }
-
-    .movement-b {
-        width: 100%;
-    }
-
-    .movement-b .cta-1 {
-        width: 70%;
-        font-size: 1rem;
-        text-align: left;
-    }
-
-    .movement-b .cta-2 {
-        width: 80%;
-        font-size: 1rem;
-        text-align: left;
-    }
-
-    /* FOOTER=============================== */
-    /* FOOTER=============================== */
-    /* FOOTER=============================== */
-    footer {
-        height: 100%;
         flex-direction: column;
-        gap: 1.5rem;
+        padding: 0rem 1rem;
+        justify-content: space-between;
     }
 
-    /* CONATCT CSS */
-    /* CONATCT CSS */
-    .contactUs-box {
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
+    @media (max-width: 500px) {
+        .navbar-container input[type="checkbox"]:checked~.logo {
+            display: none;
+        }
+
+        /* ==========================HEADER */
+        /* ==========================HEADER */
+        header {
+            height: 10%;
+            display: flex;
+            flex-direction: column;
+            gap: 11.62rem;
+            margin-bottom: 5rem;
+        }
+
+        .hero_text {
+
+            gap: 1rem;
+        }
+
+        .hero_text h1 {
+            color: #141414;
+            text-align: center;
+            font-family: Playfair Display;
+            font-size: 3rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 4rem;
+            /* 100% */
+            letter-spacing: .1rem;
+        }
+
+        .hero_text p {
+            font-family: Poppins;
+            font-size: 1.5rem;
+            font-weight: 400;
+            line-height: 22px;
+            letter-spacing: -0.02em;
+            text-align: center;
+
+        }
+
+        .hero_img img {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+        }
+
+        /* ===============================ILLUMINATING */
+        /* ===============================ILLUMINATING */
+        .illuminating {
+            gap: 2.5rem;
+            margin-bottom: 4rem;
+        }
+
+        .illuminating-1 {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            height: 100%;
+            width: 100%;
+            padding: 2%;
+        }
+
+        .illuminating-1 h2 {
+            color: #141414;
+            leading-trim: both;
+            text-edge: cap;
+            font-family: Playfair Display;
+            font-size: 2.75rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 2.125rem;
+            /* 121.429% */
+            letter-spacing: -0.0525rem;
+            width: 100%;
+        }
+
+        .illuminating-1 p {
+            color: #1E1E1E;
+            font-family: Poppins;
+            font-size: 2rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 2.375rem;
+            /* 137.5% */
+            letter-spacing: -0.02rem;
+            width: 100%;
+        }
+
+        .illuminating-2 {
+            flex-direction: column;
+        }
+
+        /* =====================ABOUT SECTION */
+        /* =====================ABOUT SECTION */
+        .about {
+
+            flex-direction: column;
+            gap: 1.5rem;
+            padding: .345%;
+        }
+
+        .about-1_a {
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            gap: 1rem;
+        }
+
+        .about-1_a-i {
+            width: 100%;
+        }
+
+        .about-1_a-i p {
+
+            font-size: 1.5rem;
+
+            font-weight: 300;
+            letter-spacing: -0.025rem;
+        }
+
+        .about-1_a-ii {
+            width: 100%;
+        }
+
+        .about-1_a-ii p {
+
+            font-size: 1.5rem;
+
+            font-weight: 300;
+            letter-spacing: -0.025rem;
+        }
+
+        /* ==========movement */
+        /* ==========movement */
+        .movement {
+            flex-direction: column;
+            padding: 0rem 0rem;
+            align-items: flex-end;
+        }
+
+        .movement-a {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 0rem 0rem;
+            gap: 1rem;
+            width: 100%;
+            margin-right: 2rem;
+        }
+
+        .movement {
+            width: 100%;
+        }
+
+        .movement-a h2 {
+            text-align: left;
+            width: 80%;
+        }
+
+        .movement p {
+            color: #1E1E1E;
+            font-family: Poppins;
+            font-size: 1.25rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 2rem;
+            letter-spacing: -0.025rem;
+            width: 80%;
+        }
+
+        .movement-b {
+            width: 100%;
+        }
+
+        .movement-b .cta-1 {
+            width: 70%;
+            font-size: 1rem;
+            text-align: left;
+        }
+
+        .movement-b .cta-2 {
+            width: 80%;
+            font-size: 1rem;
+            text-align: left;
+        }
+
+        /* FOOTER=============================== */
+        /* FOOTER=============================== */
+        /* FOOTER=============================== */
+        footer {
+            height: 100%;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        /* CONATCT CSS */
+        /* CONATCT CSS */
+        .contactUs-box {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .contactUs-form form input {
+            width: 19.375rem;
+            height: 2.5rem;
+            flex-shrink: 0;
+        }
+
+        form textarea {
+            width: 19.375rem;
+            height: 22.75rem;
+            border-radius: 0.375rem;
+            background: #FFF;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
+            border: none;
+        }
     }
 
-    .contactUs-form form input {
-        width: 19.375rem;
-        height: 2.5rem;
-        flex-shrink: 0;
-    }
-
-    form textarea {
-        width: 19.375rem;
-        height: 22.75rem;
-        border-radius: 0.375rem;
-        background: #FFF;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
-        border: none;
-    }
-}
-
-/* contact css */
+    /* contact css */
