--- a/style.css
+++ b/style.css
@@ -1152,19 +1152,31 @@ form button {
             gap: 1.5rem;
         }
 
+        .contactUs-form form {
+            padding: 5%;
+        }
+
+        .contactUs-form form input::placeholder {
+            padding-left: 2rem;
+        }
+
         .contactUs-form form input {
-            width: 19.375rem;
+            width: 100%;
             height: 2.5rem;
             flex-shrink: 0;
         }
 
         form textarea {
-            width: 19.375rem;
+            width: 100%;
             height: 22.75rem;
             border-radius: 0.375rem;
             background: #FFF;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.10);
             border: none;
+        }
+
+        form textarea::placeholder {
+            padding-left: 2rem;
         }
     }
 
