--- a/style.css
+++ b/style.css
@@ -783,7 +783,7 @@ form textarea[type=text]:focus {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     backdrop-filter: invert(40%);
     z-index: 999;
 }
